fix: solved the lack of visible focus for interactive components inside CMS UI

--- a/packages/volto/theme/themes/pastanaga/extras/main.less
+++ b/packages/volto/theme/themes/pastanaga/extras/main.less
@@ -462,15 +462,8 @@ fieldset.invisible {
   margin-top: 20px;
 }
 
-.label-file-widget-input {
-  display: inline-block;
-  padding: 7px 10px;
-  border: 2px solid #007eb1;
-  border-radius: 10px;
-  margin-top: 20px;
-  color: #007eb1;
-  cursor: pointer;
-  opacity: 0.8;
+.ui.button.label-file-widget-input {
+  margin: 20px 0;
 }
 
 .dropzone-placeholder {
@@ -713,4 +706,5 @@ img.responsive {
 @import 'views';
 @import 'toc';
 @import 'grid.less';
+@import 'focus.less';
 .loadUIOverrides();
